# steambot

./: Cargo.toml
src/: main.rs  steam_api.rs  utils.rs
src/steam_api/: app_hover.rs  dlc.rs  protondb.rs  steam_deck.rs  suggest.rs
