[package]
name = "steamer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
arrayvec = "0.7.4"
chrono = "0.4.31"
lazy_static = "1.4.0"
reqwest = { version = "0.11.23", features = ["json"] } 
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
slicedisplay = "0.2.2"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
urlencoding = "2.1.3"
frankenstein = { version = "0.30.8", features = ["async-http-client", "async-telegram-trait"] }